# sb

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  da.md  deny.toml  status_bar_test.md  test_arrow_keys.md  test_cursor.md  test_file.txt  test_highlight.rs  test_js.js  test_picker.sh  test_python.py  test_rust.rs  test_sb.sh  test_ts.ts
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml  release.yml  security.yml
benches/: benchmark.rs
docs/: PERFORMANCE_API.md  SECURITY_API.md  SECURITY_SPEC.md  TEST_STRATEGY.md  USER_GUIDE.md
docs/screenshots/: README.md
logs/: chat.json  notification.json  pre_compact.json  pre_tool_use.json  session_start.json  stop.json  subagent_stop.json  user_prompt_submit.json
src/: app.rs  cache.rs  config.rs  event_handler.rs  fs.rs  git.rs  lib.rs  main.rs  preview.rs  security.rs
src/tests/: app_tests.rs  cache_tests.rs  file_tests.rs  markdown_tests.rs  mod.rs  security_tests.rs
tests/: integration_test.rs
